tests/scripts/errors/runtime/wrong_arity_too_few.cdo
FUNCTION add(a, b) { RETURN a + b; }
print(add(1));
